# fabrik.cpp

./: .gitmodules  CMakeLists.txt  README.md
docs/: basic.css  basic.html  basic.js  basic.wasm
internals/basic/: CMakeLists.txt
internals/basic/program/: config.hpp  main.cpp  mesh.cpp  mesh.hpp
internals/tests/: CMakeLists.txt
internals/tests/testing/: test_fabrik.cpp
provides/: CMakeLists.txt
provides/include/fabrik_v1/: config.hpp  fabrik.hpp  synopsis.hpp
scripts/: watch
